--- a/.github/workflows/deveops-course-rules-enforcement.yml
+++ b/.github/workflows/deveops-course-rules-enforcement.yml
@@ -22,6 +22,8 @@ jobs:
           echo "::set-output name=payload::$payload"
       # Our action, validTasks and validTasksGroupThree can be changed if the course changes
       - run:
+          pip install PyGithub
+      - run:
           python check_rules.py ${{ secrets.GITHUB_TOKEN }} ${{ steps.echoPayload.outputs.payload}} ${{ steps.get_file_changes.outputs.files_added}} ${{ steps.get_file_changes.outputs.files_modified }}
         # with: 
         #   github-token: ${{ secrets.GITHUB_TOKEN }}
