--- a/.github/workflows/deveops-course-rules-enforcement.yml
+++ b/.github/workflows/deveops-course-rules-enforcement.yml
@@ -11,4 +11,4 @@ jobs:
       - run:
           pip install PyGithub
       - run:
-          python check_rules.py ${{ secrets.GITHUB_TOKEN }} ${{github.event}}
+          python check_rules.py ${{ secrets.GITHUB_TOKEN }} ${{toJson(github.event)}}
