Created test directory structure

--- a/.github/workflows/deveops-course-rules-enforcement.yml
+++ b/.github/workflows/deveops-course-rules-enforcement.yml
@@ -1,7 +1,10 @@
 name: DevOps Course Rules Enforcement
 on:
-# Change to PR
-  push:
+  pull-request:
+    branches:
+        - main
+      paths:
+        - contributions/**
 jobs:
   build:
     runs-on: ubuntu-latest
