--- a/.github/workflows/deveops-course-rules-enforcement.yml
+++ b/.github/workflows/deveops-course-rules-enforcement.yml
@@ -15,4 +15,5 @@ jobs:
       - run:
           pip install PyGithub
       - run:
+          echo ${{ github.repo.name }}
           python check_rules.py ${{ secrets.GITHUB_TOKEN }} ${{ github.event.pull_request.number }} ${{ github.repo.name }}
